<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--   O'zgartirish Kiritilmasin !!!     -->

    <item android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />
    <item android:id="@+id/bookFragment"
        android:title="@string/books"
        android:icon="@drawable/ic_books"
        />
    <item android:id="@+id/coursesFragment"
        android:title="@string/courses"
        android:icon="@drawable/ic_courses"
        />
    <item android:id="@+id/analyticsFragment"
        android:title="@string/analytics"
        android:icon="@drawable/ic_analytics"
        />
    <item android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        />
</menu>